# ComfyUI_FL-CosyVoice3

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
cosyvoice/llm/: llm.py
nodes/: __init__.py  audio_crop.py  cross_lingual.py  dialog.py  model_loader.py  voice_conversion.py  zero_shot.py
utils/: __init__.py  audio_utils.py  model_manager.py
workflows/: CosyVoice.json
