[project]
name = "comfyui_fl-cosyvoice3"
description = "FL CosyVoice3 - Advanced Text-to-Speech nodes for ComfyUI. Features zero-shot voice cloning, cross-lingual synthesis, instruction-based control, and voice conversion using the CosyVoice3 model family. Supports 9 languages and 18+ Chinese dialects with automatic model downloading and caching."
version = "1.0.0"
license = "Apache-2.0"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "modelscope",
    "huggingface_hub",
    "transformers",
    "librosa",
    "soundfile",
    "numpy",
    "tqdm",
    "WeTextProcessing",
    "onnxruntime",
    "requests"
]

[project.urls]
Repository = "https://github.com/filliptm/ComfyUI_FL-CosyVoice3"

[tool.comfy]
PublisherId = "machinedelusions"
DisplayName = "FL CosyVoice3"
Icon = ""
